--- a/head.html
+++ b/head.html
@@ -169,7 +169,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="shopping"><a href="">购物车</a>
+				<div class="shopping"><a href="shoppingcar.html">购物车</a>
 				<span class="num"></span>
 				</div>
 			</div>
@@ -229,7 +229,7 @@
 								<dl class="l-rows">
 									<dt class="rows-title"><a href="">社会科学<span class="bbb"></span></a></dt>
 									<dd class="rows-txt">										
-										<a href="#" title="经典著作"><b class="aaa">|</b>经典著作</a>
+										<a href="goodslist.html" title="经典著作"><b class="aaa">|</b>经典著作</a>
 										<a href="#" title="人类学"><b class="aaa">|</b>人类学</a>
 										<a href="#" title="社会结构和社会关系"><b class="aaa">|</b>社会结构和社会关系</a>
 										<a href="#" title="社会生活与社会问题"><b class="aaa">|</b>社会生活与社会问题</a>
@@ -2504,7 +2504,7 @@
 						<li><span>/</span><a href="" title="图书首页">图书首页</a></li>
 						<li><span>/</span><a href="" title="图书排行榜">图书排行榜</a></li>
 						<li><span>/</span><a href="" title="北新读书">北新读书</a></li>
-						<li><span>/</span><a href="" title="特卖汇">特卖汇</a></li>
+						<li><span>/</span><a href="private-sale.html" title="特卖汇">特卖汇</a></li>
 						<li><span>/</span><a href="" title="活动专场">活动专场</a></li>
 						<li><span>/</span><a href="" title="北京发行集团">北京发行集团</a></li>
 					</ul>
