购物车js 新加特卖汇

--- a/shoppingcar.html
+++ b/shoppingcar.html
@@ -30,7 +30,7 @@
 				getI(".dc")[0].style.display="none";
 			}
 		</script>
-		<div class="cart"  style="display: none;">
+		<div class="cart" >
 			<ul class="nav">
 				<li class="nowli">1.查看购物车</li>
 				<li class="everyli">2.填写订单信息</li>
@@ -91,7 +91,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="total" style="display: none;">
+		<div class="total">
 			<div class="total-left">
 				<input type="checkbox" class="zcheckall" checked="checked">
 				<label>全选</label>
@@ -103,8 +103,14 @@
 			</div>
 			<div class="jiesuan">结算</div>
 		</div>
-		<div class="nogoods">
-			
+		<div class="nogoods"  style="display: none;">
+			<ul>
+				<li class="shop1">
+					<img src="http://www.bxmedia.net/template/bdw/statics/images/kgwc02.jpg" alt="">
+				</li>
+				<li class="shop2"><a href="index.html"><img src="http://www.bxmedia.net/template/bdw/statics/images/kgwc03.jpg" alt=""></a></li>
+			</ul>
+			<img src="http://www.bxmedia.net/template/bdw/statics/images/kgwc01.png" alt="" class="shop3">
 		</div>
 		<script type="text/javascript">
 			shopping()
