--- a/description.html
+++ b/description.html
@@ -5,6 +5,7 @@
 		<title>北新网-新华书店综合网购平台</title>
 		<link rel="stylesheet" type="text/css" href="css/public.css"/>
 		<link rel="stylesheet" type="text/css" href="css/zhuce.css"/>
+		<link rel="stylesheet" type="text/css" href="css/goodslist.css"/>
 		<link rel="stylesheet" type="text/css" href="css/description.css"/>
 		<script type="text/javascript" src="js/$function.js"></script>
 		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
@@ -37,7 +38,297 @@
 				<li class="lilast1"><a href="">经典著作</a></li>
 			</ul>
 		</div>
-		
+		<div class="des-m">
+			<div class="shang"></div>
+			<div class="zhong">
+				<div class="z-layer">推荐商品</div>
+				<div class="z-spmore">
+					<!-- <div class="mc-bt-rt1"   style="display: none;">
+						<div class="btn left"><</div>
+						<div class="btn right">></div>
+						<div class="mrt-bot">
+							<div class="mrt-bots">
+								<div class="box">
+										<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/0/dbfee-9aec-4d25-901a-2b91444f958_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男装 篮球 针织夹克 NBA篮球茄克 NBA FAN GEAR A95416</div>
+											<div class="price"><span>￥347.0</span><label class="lab">￥699.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/98/9e38e-113a-4772-b285-e10dc65b622_160X160.jpg" ></div>
+											<div class="title">Adidas 三叶草 女装 短袖上衣 TREFOIL TEE SLA FASHION A08253</div>
+											<div class="price"><span>￥170.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/37/03ef3-e977-461c-99e4-141cd05e407_160X160.jpg" ></div>
+											<div class="title">Nike 耐克 男装 训练 短袖紧身服826592-010</div>
+											<div class="price"><span>￥206.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/51/eff3b-62a9-4cfe-9c74-4df902ad417_160X160.jpg" ></div>
+											<div class="title">Puma 彪马 男装训练基础系列针织运动长裤82561404</div>
+											<div class="price"><span>￥146.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>						
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/23/87/6598a-1173-4111-87a4-b0fca93dcd3_160X160.jpg" ></div>
+											<div class="title">阿迪达斯 adidas 球类 球 656927</div>
+											<div class="price"><span>￥131.0</span><label class="lab">￥199.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/23/79/da5d2-d9fd-4782-a363-2b0e4ba791d_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男鞋 跑步 男子跑步鞋 CLIMAHEAT B24469</div>
+											<div class="price"><span>￥681.0</span><label class="lab">￥1099.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/266/001/AB3131_05_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男装 足球 CON16训练长裤 CONDIVO AB3131</div>
+											<div class="price"><span>￥197.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/266/005/AA5512_02_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男装 篮球 篮球图案T恤 AA5512</div>
+											<div class="price"><span>￥144.0</span><label class="lab">￥249.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/0/dbfee-9aec-4d25-901a-2b91444f958_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男装 篮球 针织夹克 NBA篮球茄克 NBA FAN GEAR A95416</div>
+											<div class="price"><span>￥347.0</span><label class="lab">￥699.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/98/9e38e-113a-4772-b285-e10dc65b622_160X160.jpg" ></div>
+											<div class="title">Adidas 三叶草 女装 短袖上衣 TREFOIL TEE SLA FASHION A08253</div>
+											<div class="price"><span>￥170.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/37/03ef3-e977-461c-99e4-141cd05e407_160X160.jpg" ></div>
+											<div class="title">Nike 耐克 男装 训练 短袖紧身服826592-010</div>
+											<div class="price"><span>￥206.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/22/51/eff3b-62a9-4cfe-9c74-4df902ad417_160X160.jpg" ></div>
+											<div class="title">Puma 彪马 男装训练基础系列针织运动长裤82561404</div>
+											<div class="price"><span>￥146.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/23/87/6598a-1173-4111-87a4-b0fca93dcd3_160X160.jpg" ></div>
+											<div class="title">阿迪达斯 adidas 球类 球 656927</div>
+											<div class="price"><span>￥131.0</span><label class="lab">￥199.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/1/2016/4/23/79/da5d2-d9fd-4782-a363-2b0e4ba791d_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男鞋 跑步 男子跑步鞋 CLIMAHEAT B24469</div>
+											<div class="price"><span>￥681.0</span><label class="lab">￥1099.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/266/001/AB3131_05_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男装 足球 CON16训练长裤 CONDIVO AB3131</div>
+											<div class="price"><span>￥197.0</span><label class="lab">￥299.0</label></div>
+										</a>
+									</div>
+									<div class="list">
+										<a href="" title="">
+											<div class="pic"><img title="" src="http://images.bxmedia.net/upload/266/005/AA5512_02_160X160.jpg" ></div>
+											<div class="title">Adidas 阿迪达斯 男装 篮球 篮球图案T恤 AA5512</div>
+											<div class="price"><span>￥144.0</span><label class="lab">￥249.0</label></div>
+										</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div> -->
+			</div>
+			<div class="xia">
+				<div class="xia-left">
+					<ul class="xl-t">
+						<li>商品详情</li>
+						<li>包装清单</li>
+						<li>售后服务</li>
+						<li>客户评论（<span>0</span>）</li>
+						<li>售前咨询</li>
+					</ul>
+					<div class="xl-list1">
+						<div class="xllist-n">内容简介</div>
+						<div class="xllist1-txt">《君主论》是一本毁誉参半、不可不读的奇书，一直被奉为欧洲历代君主的案头之书，政治家的高指南，统治阶级巩固其统治的治国原则，和人类有史以来对政治斗争技巧最独到最精辟的解剖。自1532年开始印行，迄今470多年，从西方到东方，本书在政界、宗教界、学术等领域引起巨大的反响，被西方评论界列为和《圣经》、《资本论》等相提并论的影响人类历史的十部著作之一。 </div>
+					</div>
+					<div class="xl-list2">
+						<div class="xllist-n">目录</div>
+						<div class="xllist2-txt">
+							<div class="xllist2-txt1"></div>
+							<div class="ckmore">查看全部内容</div>
+							<div class="shouqi">收起</div>
+						</div>
+					</div>
+					<div class="xl-list3">
+						<div class="xllist-n">节选</div>
+						<div class="xllist3-txt">
+							<div class="xllist2-txt2"></div>
+							<div class="ckmore">查看全部内容</div>
+							<div class="shouqi">收起</div>
+						</div>
+					</div>
+				</div>
+				<div class="xia-right">
+					<div class="left-box02" style="float: right;">
+						<div class="b-title">我的足迹<a href="">清空</a></div>
+						<ul class="b-list1">
+							<li>
+								<a href="" title="理想国"><img src="http://images.bxmedia.net/upload/images/1035/710001756362_1_160X160.jpg" alt="" width="60" height="60"></a>
+								<p>
+									<i>理想国</i>
+									<b>￥29.50</b>
+								</p>
+							</li>
+						</ul>
+						<ul class="b-list1">
+							<li>
+								<a href="" title="理想国"><img src="http://images.bxmedia.net/upload/images/1035/710001756362_1_160X160.jpg" alt="" width="60" height="60"></a>
+								<p>
+									<i>理想国</i>
+									<b>￥29.50</b>
+								</p>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+		<script type="text/javascript" src="js/ajaxpromise.js"></script>
+		<script type="text/javascript">
+			function getDataa(pageIndex){
+				ajaxPromise({
+					"url":"php/news1.php",
+					"params":{
+						pageIndex:pageIndex
+					}
+				}).then(
+					function(str){
+						getI(".xllist2-txt1")[0].innerHTML += str;
+					}
+				);
+			}
+			
+			function getDatab(pageIndex){
+				ajaxPromise({
+					"url":"php/news2.php",
+					"params":{
+						pageIndex:pageIndex
+					}
+				}).then(
+					function(str){
+						getI(".xllist2-txt2")[0].innerHTML += str;
+					}
+				);
+			}
+			function getDataa1(pageIndex){
+				ajaxPromise({
+					"url":"php/news1.php",
+					"params":{
+						pageIndex:pageIndex
+					}
+				}).then(
+					function(str){
+						getI(".xllist2-txt1")[0].innerHTML = str;
+					}
+				);
+			}
+			function getDatab1(pageIndex){
+				ajaxPromise({
+					"url":"php/news2.php",
+					"params":{
+						pageIndex:pageIndex
+					}
+				}).then(
+					function(str){
+						getI(".xllist2-txt2")[0].innerHTML = str;
+					}
+				);
+			}
+			getDataa(1);
+			getI(".ckmore")[0].onclick = function(){
+				getDataa(2);
+				this.style.display = "none";
+				getI(".shouqi")[0].style.display = "block";
+			}
+			getDatab(1);
+			getI(".ckmore")[1].onclick = function(){
+				getDatab(2);
+				this.style.display = "none";
+				getI(".shouqi")[1].style.display = "block";
+			}
+			
+			getI(".shouqi")[0].onclick = function(){
+				document.body.scrollTop = document.documentElement.scrollTop = 50;
+				this.style.display = "none";
+				getI(".ckmore")[0].style.display = "block";
+				getDataa1(1)
+			}
+			getI(".shouqi")[1].onclick = function(){
+				document.body.scrollTop = document.documentElement.scrollTop = 50;
+				this.style.display = "none";
+				getI(".ckmore")[1].style.display = "block";
+				getDatab1(1)
+			}
+			
+		</script>
+		<!-- <script type="text/javascript">
+				var index=4;
+				var size=$('.box').children().size();
+				var listWidth=$('.list').width();
+				$(".right").click(function(){
+					index++;
+					change();
+				})
+				$(".left").click(function(){
+					index--;
+					change();
+				})
+				function change(){
+					let slideWidth=-1*listWidth*index;
+					$(".box").animate({ 
+						 'left':slideWidth+'px'
+					}, 500);
+					 if(index>=size-4){
+					    $('.box').animate({'left':-listWidth*4+'px'},0);// 图片切换过去   
+					    index=4;
+					}
+					 if(index<1){
+					    //要注意在执行下面这段函数之前，已经切换到图片C了。
+					    $('.box').animate({'left':-(size-8)*listWidth+'px'},0);
+					    // (肉眼看不到),但实际已经切换到图片C了
+					    index=size-8;
+					}
+				}
+		</script> -->
 			<!-- foot -->
 		<div class="foot"></div>
 		<script type="text/javascript">
