--- a/denglu.html
+++ b/denglu.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/denglu2.css"/>
 		<script type="text/javascript" src="js/$function.js"></script>
 		<script type="text/javascript" src="js/cookietools.js"></script>
+		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 	</head>
 	<body>
 		<div class="beixin">
@@ -19,8 +20,8 @@
 				<div class="txt-t">
 					<h2>北新网用户登录</h2>
 					<p>请输入用户名和密码</p>
-					<label>用户名：</label><input class="txt-t-ip tp" placeholder="请输入手机号" name="userphone" maxlength="11" /><br/>
-					<label>密码：</label><input class="txt-t-ip tpas" type="password" name="userpass" /><br/>
+					<label>用户名：</label><input class="txt-t-ip tp" placeholder="请输入手机号" name="userphone" maxlength="11"/><br/>
+					<label>密码：</label><input class="txt-t-ip tpas" type="password" name="userpass"/><br/>
 					<input class="dl-dl" type="button" value="登录" /><a href="forgetpassword.html">忘记密码？</a><br/>
 				</div>
 				<div class="txt-b">
@@ -33,8 +34,20 @@
 </html>
 <script type="text/javascript">
 	getI(".dl-dl")[0].onclick=function(){
-		saveCookie("userphone",getI(".tp")[0].value,7);
-		saveCookie("userpass",getI(".tpas")[0].value,7);
-		window.location.href="index.html";
+		var userphone=getI(".tp")[0].value;
+		var userpass=getI(".tpas")[0].value;
+		
+		$.post("php/login.php",{userphone:userphone,
+		userpass:userpass
+		},
+		function(str){
+			if(str==0){
+				alert("用户名或密码不对，请重新登录")
+			}else{
+				saveCookie("userphone",getI(".tp")[0].value,7);
+				saveCookie("userpass",getI(".tpas")[0].value,7);
+				window.location.href="index.html";
+			}
+		});
 	}
 </script>
