--- a/goodslist.html
+++ b/goodslist.html
@@ -231,9 +231,17 @@
 						function(data){
 							data=JSON.parse(data)
 							goodsrender(data)
-							addevent()
+							addevent(data)
+							locahref(data)
 						});
-						
+						function locahref(str){
+							$(".descript").each(function(i,ele){
+								$(ele).click((event)=>{
+									event.preventDefault();
+									window.location.href="description.html?goodsId="+str[i].goodsId
+								})
+							})
+						}
 					</script>
 				</div>
 			</div>
@@ -261,6 +269,9 @@
 				</div>
 			</div>
 		</div>
+		<script type="text/javascript">
+			
+		</script>
 			<!-- foot -->
 		<div class="foot"></div>
 		<script type="text/javascript">
