--- a/head.html
+++ b/head.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="css/public.css"/>
 		<link rel="stylesheet" type="text/css" href="css/denglu.css"/>
 		<script type="text/javascript" src="js/$function.js"></script>
+		<script type="text/javascript" src="js/cookietools.js"></script>
 	</head>
 	<body>
 		<div class="topz">
@@ -68,8 +69,8 @@
 						<div class="txt-t">
 							<h2>北新网用户登录</h2>
 							<p>请输入用户名和密码</p>
-							<label>用户名：</label><input class="txt-t-ip" placeholder="请输入手机号" /><br/>
-							<label>密码：</label><input class="txt-t-ip" type="" placeholder="" /><br/>
+							<label>用户名：</label><input class="txt-t-ip tp" placeholder="请输入手机号" /><br/>
+							<label>密码：</label><input class="txt-t-ip tpas" type="password" placeholder="" /><br/>
 							<input class="dl-dl" type="button" value="登录" /><a href="forgetpassword.html">忘记密码？</a><br/>
 						</div>
 						<div class="txt-b">
@@ -82,6 +83,8 @@
 			<div class="corver1"></div>
 		</div>
 		<script type="text/javascript">
+			
+			
 			//点击登录显示
 			getI(".dl")[0].onclick=(event)=>{
 				var evt=window.event || event;
@@ -2512,6 +2515,22 @@
 			</div>
 		</div>
 		<script type="text/javascript">
+			window.onload=function(){
+				let userphone=getCookie("userphone");
+				if(userphone){
+					getI(".top")[0].children[0].innerHTML=`[<a href="" class="dl" style="color:red;">${userphone}</a>]您好，欢迎来到北新网-新华书店综合网购平台！<span>[<a href="" class="back">退出</a>]</span>`;
+				}else{
+					getI(".top")[0].children[0].innerHTML=`您好，欢迎来到北新网-新华书店综合网购平台！<span>[<a href="" class="dl">登录</a>]</span><span>[<a href="yanzheng.html">免费注册</a>]</span>`;
+				}
+				
+				getI(".back")[0].onclick=function(event){
+					let evt=window.event || event
+					evt.preventDefault();
+					saveCookie("userphone",userphone,-1);
+					window.location.href="index.html";
+				}
+			}
+			
 			var items=getI(".item");
 			for(let i=0;i<items.length;i++){
 				items[i].onmouseover=function(){
