--- a/shoppingcar.html
+++ b/shoppingcar.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="js/$function.js"></script>
 		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="js/shoppingcar.js"></script>
+		<script type="text/javascript" src="js/shoppingchange.js"></script>
 		<link rel="import" href="head.html" id="page1"/>
 		<link rel="shortcut icon" href="img/bitbug_favicon.ico" /> 
 	</head>
@@ -114,9 +115,16 @@
 			<img src="http://www.bxmedia.net/template/bdw/statics/images/kgwc01.png" alt="" class="shop3">
 		</div>
 		<script type="text/javascript">
-			shopping()
+			var vipName=getCookie("userphone");
+			$.get("php/getShoppingCart.php",{vipName:vipName
+			},
+			function(data){
+				data=JSON.parse(data)
+				rendersplist(data)
+				changeCar(data)
+			})
+		
 		</script>
-		<script type="text/javascript" src="js/shoppingchange.js"></script>
 			<!-- foot -->
 		<div class="foot"></div>
 		<script type="text/javascript">
