--- a/yanzheng.html
+++ b/yanzheng.html
@@ -9,6 +9,7 @@
 		<script type="text/javascript" src="js/$function.js"></script>
 		<link rel="import" href="head.html" id="page1"/>
 		<script type="text/javascript" src="js/jquery-1.8.3.min.js"></script>
+		<script type="text/javascript" src="js/denglu.js"></script>
 		<link rel="shortcut icon" href="img/bitbug_favicon.ico" /> 
 	</head>
 	<body>
@@ -179,6 +180,7 @@
 				getI(".denglu-bt")[0].style.display="block";
 				getI(".denglu")[0].style.display="block";
 				getI(".denglu-bt")[0].style.height=`${helight1}px`;
+				beixindl()
 			}
 			//点击X隐藏
 			getI(".delete")[0].onclick=function(){
